# -

./: .gitignore  Cargo.toml  README.md  index.html  info.css  kanjis.css  styles.css  t.js
src/: app.rs  ask.rs  button_link.rs  home.rs  invoke.rs  kanji_info.rs  learningkanji.rs  main.rs  radical_info.rs  svgs.rs  utils.rs  vocab_info.rs
src-tauri/: Cargo.toml  blob.json  kanjis.json  levels.json  tauri.conf.json  vocabulary.json
src-tauri/icons/: icon.icns
src-tauri/levels/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+20 more)
src-tauri/src/: lib.rs  main.rs
