[package]
name = "nihon-ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6.9", features = ["csr"] }
leptos-use = "0.10.5"
leptos_router = { version = "0.6.9", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
rand = "0.8.5"
wana_kana = "3.0.0"
chrono = "0.4.35"
rust-fuzzy-search = "0.1.1"

[workspace]
members = ["src-tauri"]
